Bug 228523 - Multiple repositories on same location